--- a/shared.css
+++ b/shared.css
@@ -24,6 +24,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+    line-height: 1.6;
     background-color: var(--off-white);
     color: var(--dark-green);
     overflow-x: hidden;
